--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="style.css\style.css\style.css">
     <script src="https://kit.fontawesome.com/4178165e5b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <title>website</title>
+    <title>hemanth-reddy</title>
 </head>
 <body>
     <div id="header">
         <div class="container">
             <nav>
-                <img src="hemu.jpg" alt="hemanth" class="logo">
+                <img src="inten.jpg" alt="hemanth" class="logo">
                 <img src="logo.png">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#main-skills">Skills</a></li>
                     <li><a href="#certificates">Certifications</a></li>
-                    <li><a href="resume.pdf">Resume</a></li>
+                    <li><a href="RESUME  HEMANTH REDDY (1).pdf">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-times" onclick="closemenu()"></i>
                 </ul>
@@ -220,8 +220,6 @@
         </div>
     </div>
 </section>  
-
-
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
@@ -237,7 +235,6 @@
         document.getElementById(tabname).classList.add("active-tab");
     }
 </script>
-
 <script>
     
     var sidemenu = document.getElementById("sidemenu");
@@ -306,4 +303,4 @@
     setInterval(changeWord, 4000);
 </script>
 </body>
-</html>
+    </html>
