--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="inten.jpg" alt="hemanth" class="logo">
+                <img src="palle.jpg" alt="hemanth" class="logo">
                 <img src="logo.png">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
@@ -303,4 +303,4 @@
     setInterval(changeWord, 4000);
 </script>
 </body>
-    </html>
+        </html>
